--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
+@import "./base.css";
+
 body {
     margin: 0;
     font-family: 'Calibri', sans-serif;
     background-color: #0d1b2a; /* Deep dark blue */
-    color: #e0e0e0;
+    color: var(--color-tertiary);
 }
 
 .layout {
