--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     font-family: 'Calibri', sans-serif;
     background-color: #0d1b2a; /* Deep dark blue */
     color: var(--color-tertiary);
-    cursor: url('sword-cursor.png'), auto;
+    cursor: url('img/sword-cursor.png'), auto;
 }
 
 .layout {
